Gaps fixed

--- a/knp/autodoc/common_files/styles/custom.css
+++ b/knp/autodoc/common_files/styles/custom.css
@@ -119,3 +119,15 @@ html.dark-mode td#projectlogo > img {
     filter: invert(45%) sepia(94%) saturate(598%) hue-rotate(127deg) brightness(89%) contrast(101%);
 }
 */
+
+
+/***** TODO try to cleanup on theme update */
+/* Remove unused "gaps" on both sides of content header */
+#doc-content .header .headertitle .title {
+    max-width: unset;
+}
+
+/* Remove unused "gaps" on both sides of content table */
+#doc-content .contents {
+    max-width: unset;
+}
